compilateurDeca/src/test/deca/syntax/valid/sans_objet/chain.deca

// Description:
//Teste l'affectation chaînée 
// Historique:09/01/2026
{
    int x, y, z;
    x=y=z=2; 

}