compilateurDeca/src/test/deca/syntax/invalid/sans_objet/comment.deca

//Description
//
////Teste une commentaire mal formé
// Historique:
//    cree le 08/01/2026
{
    */commentaire
    int x;
} 